[package]
name = "sansrpc-compio"
version = "0.1.0"
edition = "2024"

[dependencies]
compio = "0.15.0"
futures = "0.3.31"
sansrpc-proto = { path = "../sansrpc-proto" }

[features]
json = ["sansrpc-proto/json"]
bincode = ["sansrpc-proto/bincode"]

[dev-dependencies]
compio = { version = "0.15.0", features = ["all"] }
sansrpc-proto = { path = "../sansrpc-proto", features = ["all"] }
serde = { version = "1.0.219", features = ["derive"] }
