[package]
name = "sansrpc-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.6.4"
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
bincode = { version = "2.0.1", features = ["serde"], optional = true }
thiserror = "2.0.12"
flume = "0.11.1"
oneshot = "0.1.11"

[features]
all = ["json", "bincode"]
json = ["dep:serde_json"]
bincode = ["dep:bincode"]
