[package]
name = "sansrpc-tokio"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.0", features = ["net", "io-util"] }
futures = "0.3.31"
sansrpc-proto = { path = "../sansrpc-proto" }

[features]
json = ["sansrpc-proto/json"]
bincode = ["sansrpc-proto/bincode"]

[dev-dependencies]
tokio = { version = "1.46.0", features = ["full"] }
sansrpc-proto = { path = "../sansrpc-proto", features = ["all"] }
serde = { version = "1.0.219", features = ["derive"] }
